Fixed Contrast ratio
on text

--- a/style.less
+++ b/style.less
@@ -48,7 +48,7 @@ html {
 		}
 
 		.text {
-			color: @Medium-Grey;
+			color: @White;
 			font-size: 14px;
 		}
 	}
